--- a/app/globals.css
+++ b/app/globals.css
@@ -35,3 +35,9 @@ body {
 @theme {
   --animate-shine: shine 5s linear infinite;
 }
+
+@layer utilities {
+  .text-shadow-cyan {
+    text-shadow: 0 0 8px rgba(34, 211, 238, 0.6); /* м’яке світіння */
+  }
+}
