--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,10 +3,8 @@
 }
 
 .container {
-  width: 90%;
-  max-width: 1280px;
   margin: 0px auto;
-  padding: 0 16px 16px;
+  padding: 0 16px;
 }
 
 .title {
