--- a/app/(private routes)/@sidebar/SideBarNotes.module.css
+++ b/app/(private routes)/@sidebar/SideBarNotes.module.css
@@ -2,8 +2,8 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 90%;
-  margin-bottom: auto;
+  width: 100%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,10 +16,13 @@
 
 .menuLink {
   text-decoration: none;
-  padding: 8px 12px;
-  border-radius: 8px;
+  padding: 6px 10px;
+  font-weight: normal;
+  font-size: 14px;
   display: block;
-  font-size: 16px;
+
+  border: 1px solid rgb(5, 51, 69);
+  border-radius: 8px;
   transition: background-color 0.3s ease, transform 0.2s ease;
   width: 60%;
   display: flex;
@@ -30,12 +33,22 @@
 }
 
 .menuLink.active {
-  background-color: rgba(3, 73, 98, 0.499);
+  animation: shadow-drop-center-low 1.5s infinite alternate;
 
   backdrop-filter: blur(4px);
 }
 .menuLink:hover {
-  background-color: rgba(3, 73, 98, 0.499);
   transform: translateX(16px);
-  backdrop-filter: blur(4px);
+  backdrop-filter: blur(1000px);
+}
+
+@keyframes shadow-drop-center-low {
+  0% {
+    box-shadow: 0 0 3px rgba(0, 101, 134, 0.3), 0 0 5px rgba(0, 101, 126, 0.2),
+      0 0 5px rgba(0, 150, 200, 0.1);
+  }
+  100% {
+    box-shadow: 0 0 6px rgba(0, 179, 255, 0.353),
+      0 0 10px rgba(0, 179, 255, 0.288), 0 0 10px rgba(0, 179, 255, 0.205);
+  }
 }
