--- a/components/Pagination/Pagination.module.css
+++ b/components/Pagination/Pagination.module.css
@@ -3,29 +3,33 @@
   justify-content: center;
   gap: 10px;
   padding: 16px 0;
+  margin-top: 6px;
   list-style: none;
   padding: 0;
   user-select: none;
-  align-self: flex-end;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .pagination li {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
+  width: 28px;
+  height: 28px;
+  border-radius: 10px;
   overflow: hidden;
-  background-image: linear-gradient(to left, #ffe4b2, #c8b0886f);
-  border: 2px solid rgb(0, 0, 0);
-  box-shadow: 0.15em 0.15em rgb(0, 0, 0);
+  border: 2px solid rgb(5, 51, 69);
   cursor: pointer;
-  transition: transform 0.2s ease, box-shadow 0.3s ease, background 0.3s ease;
+  transition: all 0.3s ease 0.3s ease;
+}
+
+@media screen and (min-width: 768px) {
+  .pagination li {
+    width: 32px;
+    height: 32px;
+  }
 }
 
 .pagination li:hover {
   transform: translateY(-2px);
-
-  background: saddlebrown;
+  box-shadow: 0 0 5px rgba(0, 101, 134, 0.3), 0 0 5px rgba(0, 101, 126, 0.2),
+    0 0 10px rgba(0, 150, 200, 0.1);
 }
 
 .pagination a {
@@ -34,19 +38,26 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  font-family: "Norican", cursive;
   font-weight: 900;
   font-size: 12px;
-  color: rgb(0, 0, 0);
   text-decoration: none;
   transition: color 0.2s ease;
 }
 
 .pagination .active {
-  background: saddlebrown;
-  color: white;
+  color: rgb(162, 249, 249);
   font-weight: 600;
-
-  box-shadow: 0.05em 0.05em rgb(0, 0, 0);
   transform: scale(1.05);
+  animation: shadow-drop-center 1.5s infinite alternate;
+}
+
+@keyframes shadow-drop-center {
+  0% {
+    box-shadow: 0 0 3px rgba(0, 101, 134, 0.3), 0 0 5px rgba(0, 101, 126, 0.2),
+      0 0 5px rgba(0, 150, 200, 0.1);
+  }
+  100% {
+    box-shadow: 0 0 6px rgba(0, 179, 255, 0.353),
+      0 0 10px rgba(0, 179, 255, 0.288), 0 0 10px rgba(0, 179, 255, 0.205);
+  }
 }
