--- a/components/Modal/NoteModal.module.css
+++ b/components/Modal/NoteModal.module.css
@@ -14,6 +14,9 @@
 }
 
 .modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 24px;
   border-radius: 8px;
   max-width: 500px;
