--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-  font-family: var(--font-roboto), sans-serif;
+  font-family: var(--font-parkinsans), sans-serif;
   color: rgb(89, 201, 201);
   letter-spacing: 0.05em;
   display: flex;
