--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,6 @@
 /* stylelint-disable at-rule-no-unknown */
 @import "tailwindcss";
 @plugin "daisyui";
-
 @custom-variant dark (&:is(.dark *));
 @theme {
   --font-marker: var(--font-marker);
@@ -43,7 +42,7 @@ body {
     transform: translateX(0);
   }
   50% {
-    transform: translateX(-8px); /* рухаємо вліво, бо вказує на GitHub */
+    transform: translateX(-8px); 
   }
 }
 
@@ -68,6 +67,6 @@ body {
 
 @layer utilities {
   .text-shadow-cyan {
-    text-shadow: 0 0 8px rgba(34, 211, 238, 0.6); /* м’яке світіння */
+    text-shadow: 0 0 8px rgba(34, 211, 238, 0.6); 
   }
 }
